# friend-knowledgebase

./: .gitignore  CLAUDE.md  README.md
backend/: CLAUDE.md  Cargo.toml
backend/migrations/: 001_initial_schema.sql
backend/src/: main.rs
backend/src/models/: friend.rs  friend_attribute.rs  friend_relationship.rs  group.rs  mod.rs  user.rs  user_friend_relationship.rs
backend/src/repositories/: base.rs  error.rs  friend_attribute_repository.rs  friend_relationship_repository.rs  friend_repository.rs  group_repository.rs  mod.rs  user_friend_relationship_repository.rs  user_repository.rs
docs/claude/: LOGGING.md
docs/plans/: 2025-12-24-database-schema-design.md  CLAUDE.md
frontend/: CLAUDE.md
