[package]
name = "friend-knowledgebase-backend"
version = "0.1.0"
edition = "2024"

[dependencies]
# Util
anyhow = "1.0.100"
chrono = "0.4.42"
dotenv = "0.15.0"
log = "0.4.28"
serde = { version = "1.0.228", features = ['derive'] }
tokio = { version = "1.14.0", features = ["macros", "rt-multi-thread"] }
tower = "0.5.2"


uuid = { version = "1.18.1", features = ["serde", "v7"] }

# DB
sqlx = { version = "0.8.6", features = ["runtime-tokio-native-tls", "postgres", "uuid", "time", "chrono"] }
clap = { version = "4.5.48", features = ["derive", "env"] }
bcrypt = "0.17.1"
time = { version = "0.3.44", features = ["serde", "serde-human-readable"] }
axum = "0.8.6"
serde_json = "1.0.145"
thiserror = "1.0"
async-trait = "0.1"
